--- a/kalender.html
+++ b/kalender.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kreatex – Dashboard</title>
+  <title>Kreatex – Kalender</title>
   <meta name="theme-color" content="#3b5370">
   <link rel="icon" href="assets/logo.png">
   <link rel="stylesheet" href="styles.css">
@@ -40,35 +40,14 @@
 
   <main class="container" role="main">
     <div class="page-header">
-      <h1>Dashboard</h1>
+      <h1>Kalender</h1>
     </div>
     
 <section class="grid">
-  <div class="kx-card col-6">
-    <div class="card-head">Schnellstart</div>
-    <div class="card-body">
-      <p>Dies ist der Grundaufbau. Die eigentliche Funktionalität (Zeiten erfassen, Auswertungen, PDF-Export) kommt im nächsten Schritt.</p>
-      <p><a class="btn" href="mitarbeiter.html">Mitarbeiter anlegen</a></p>
-    </div>
-  </div>
-  <div class="kx-card col-6">
-    <div class="card-head">Status</div>
-    <div class="card-body">
-      <ul>
-        <li>Designfarben gemäß Vorgabe</li>
-        <li>Responsive Navigation mit Logo links, Titel in der Mitte, Menü rechts</li>
-        <li>Separate Seiten: Dashboard, Mitarbeiter, Analyse, Kalender</li>
-      </ul>
-    </div>
-  </div>
   <div class="kx-card col-12">
-    <div class="card-head">Nächste Schritte (Beispiel)</div>
+    <div class="card-head">Kalender</div>
     <div class="card-body">
-      <ol>
-        <li>Persistente Speicherung (localStorage / IndexedDB) für Mitarbeiter & Zeiten</li>
-        <li>Monatsansicht & PDF-Export</li>
-        <li>Überstundenberechnung (IST/SOLL/Überstunden)</li>
-      </ol>
+      <p>Hier wird später die Monats-/Wochenansicht der Zeiten integriert.</p>
     </div>
   </div>
 </section>
